# fallacy-analyzer

./: .env.example  README.md  main.py  pyproject.toml
