[project]
name = "fallacy-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Ean Seng Chang",email = "eansengchang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "discord (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
